syntax = "proto3";

package event;

import "google/protobuf/timestamp.proto";

message ValueMap {
  map<string, Value> map = 1;
}

message ValueArray {
  repeated Value items = 1;
}

enum ValueNull {
  NULL_VALUE = 0;
}

message Value {
  oneof kind {
    bytes bytes = 1;
    double float = 2;
    int64 integer = 3;
    bool boolean = 4;
    google.protobuf.Timestamp timestamp = 5;
    ValueArray array = 6;
    ValueMap map = 7;
    ValueNull null = 8;
  }
}

message TagValueArray {
  enum ArrayKind {
    Bool = 0;
    I64 = 1;
    F64 = 2;
    String = 3;
  }

  ArrayKind kind = 1;

  repeated bool bool = 2;
  repeated int64 i64 = 3;
  repeated double f64 = 4;
  repeated string string = 5;
}

// This message is just another
message TagValue {
  oneof value {
    bool bool = 1;
    int64 i64 = 2;
    double f64 = 3;
    string string = 4;
    TagValueArray array = 5;
  }
}

message Metadata {
  Value value = 1;
  optional string source_id = 2;
  optional string source_type = 3;
}

message Log {
  Metadata metadata = 1;

  Value fields = 2;
}

message Counter {
  double value = 1;
}

message Gauge {
  double value = 1;
}

message Bucket {
  double upper = 1;
  uint64 count = 2;
}

message Histogram {
  uint64 count = 1;
  double sum = 2;
  repeated Bucket buckets = 3;
}

message Quantile {
  double quantile = 1;
  double value = 2;
}

message Summary {
  uint64 count = 1;
  double sum = 2;
  repeated Quantile quantiles = 3;
}

message Metric {
  Metadata metadata = 1;

  string name = 2;
  map<string, TagValue> tags = 3;
  string description = 4;
  string unit = 5;
  google.protobuf.Timestamp timestamp = 6;

  oneof value {
    Counter counter = 7;
    Gauge gauge = 8;
    Histogram histogram = 9;
    Summary summary = 10;
  }
}

message EventWrapper {
  oneof event {
    Log log = 1;
    Metric metric = 2;
  }
}

message Events {
  message Logs {
    repeated Log logs = 1;
  }

  message Metrics {
    repeated Metric metrics = 1;
  }

  oneof events {
    Logs logs = 1;
    Metrics metrics = 2;
  }
}